--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
         <h1 id="titulo">Lessons Learned | Trybe</h1>
     </header>
     <img src="img/2021-09-12-195618.jpg" alt="Matheus Machado" id="minha_foto">
+    <ol id="licoes_aprendidas">
+        <li>Bash</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Unix</li>
+        <li>Slack</li>
+        <li>Empatia</li>
+        <li>Dedicação</li>
+        <li>Resiliencia</li>
+    </ol>
 </body>
 </html>
