--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
         <li>Dedicação</li>
         <li>Resiliencia</li>
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>CSS responsivo</li>
+        <li>SQL</li>
+        <li>Node</li>
+        <li>React</li>
+        <li>Unit tests</li>
+        <li>Empatia</li>
+        <li>Python</li>
+        <li>Estrutura de dados</li>
+    </ul>
 </body>
 </html>
