--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
         <li>Python</li>
         <li>Estrutura de dados</li>
     </ul>
+    <footer id="rodape">
+        <a href="https://github.com/mmdec" target="_blank">Meu perfil no github</a>
+    </footer>
 </body>
 </html>
