--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <li>Python</li>
         <li>Estrutura de dados</li>
     </ul>
+    <article>
+        <h3>Meu caminho até o momento</h3>
+        <p>Dei inicio aos meus estudos na turma 16 da Trybe dia 18 de agosto, onde mergulhamos nesse mundo, diferente ao que eu estava acostumado, o Unix. Então partimos para Git e GitHub, essa ferramenta fantastica para repositorios e enfim chegamos ao HTML e CSS o ponta pé inicial para minha carreira como programador</p>
+    </article>
     <footer id="rodape">
         <a href="https://github.com/mmdec" target="_blank">Meu perfil no github</a>
     </footer>
