--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <h3>Meu caminho até o momento</h3>
         <p>Dei inicio aos meus estudos na turma 16 da Trybe dia 18 de agosto, onde mergulhamos nesse mundo, diferente ao que eu estava acostumado, o Unix. Então partimos para Git e GitHub, essa ferramenta fantastica para repositorios e enfim chegamos ao HTML e CSS o ponta pé inicial para minha carreira como programador</p>
     </article>
+    <aside>
+        <p>Certa vez eu estudando sobre comandos basicos de Unix, quando me deparei com a situação onde precisava excluir um diretorio mas ele não estava vazio logo precisava utilizar o comando rm -rf diretorio e eu desatento após ver esse codigo digitava rmdir, alguns minutos depois percebi o pequeno detalhe</p>
+    </aside>
     <footer id="rodape">
         <a href="https://github.com/mmdec" target="_blank">Meu perfil no github</a>
     </footer>
