--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt_br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -9,40 +10,59 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
     </header>
-    <img src="img/2021-09-12-195618.jpg" alt="Matheus Machado" id="minha_foto">
-    <ol id="licoes_aprendidas">
-        <li>Bash</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Unix</li>
-        <li>Slack</li>
-        <li>Empatia</li>
-        <li>Dedicação</li>
-        <li>Resiliencia</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>CSS responsivo</li>
-        <li>SQL</li>
-        <li>Node</li>
-        <li>React</li>
-        <li>Unit tests</li>
-        <li>Empatia</li>
-        <li>Python</li>
-        <li>Estrutura de dados</li>
-    </ul>
-    <article>
-        <h3>Meu caminho até o momento</h3>
-        <p>Dei inicio aos meus estudos na turma 16 da Trybe dia 18 de agosto, onde mergulhamos nesse mundo, diferente ao que eu estava acostumado, o Unix. Então partimos para Git e GitHub, essa ferramenta fantastica para repositorios e enfim chegamos ao HTML e CSS o ponta pé inicial para minha carreira como programador</p>
-    </article>
-    <aside>
-        <p>Certa vez eu estudando sobre comandos basicos de Unix, quando me deparei com a situação onde precisava excluir um diretorio mas ele não estava vazio logo precisava utilizar o comando rm -rf diretorio e eu desatento após ver esse codigo digitava rmdir, alguns minutos depois percebi o pequeno detalhe</p>
-    </aside>
+    <section id="container_img">
+        <img src="img/2021-09-12-195618.jpg" alt="Matheus Machado" id="minha_foto">
+    </section>
+    <section id="sec_listas">
+        <div id="container_aprendidas">
+            <h2>Licões ja aprendidas</h3>
+            <ol id="licoes_aprendidas">
+                <li>Bash</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Unix</li>
+                <li>Slack</li>
+                <li>Empatia</li>
+                <li>Dedicação</li>
+                <li>Resiliencia</li>
+            </ol>
+        </div>
+        <div id="container_a_aprender">
+            <h2>Lições a aprender</h3>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>CSS responsivo</li>
+                <li>SQL</li>
+                <li>Node</li>
+                <li>React</li>
+                <li>Unit tests</li>
+                <li>Empatia</li>
+                <li>Python</li>
+                <li>Estrutura de dados</li>
+            </ul>
+        </div>
+    </section>
+    <section id="container_artigo">
+        <article>
+            <h2>Meu caminho até o momento</h3>
+            <p>Dei inicio aos meus estudos na turma 16 da Trybe dia 18 de agosto, onde mergulhamos nesse mundo, diferente ao que eu estava acostumado, o Unix. Então partimos para Git e GitHub, essa ferramenta fantastica para repositorios e enfim chegamos ao HTML e CSS o ponta pé inicial para minha carreira como programador</p>
+        </article>
+        <aside>
+            <p>Sempre fique atento a detalhes como ";" ou comandos muito parecidos, certa vez fiquei alguns minutos tentando entender por que meu codigo não estava funcionando e no fim era apenas um ";"</p>
+        </aside>
+    </section>
     <footer id="rodape">
-        <a href="https://github.com/mmdec" target="_blank">Meu perfil no github</a>
+        
+        <nav id="links_externos">
+            <ul>
+              <li><a href="https://www.betrybe.com/" target="_blank">Site da Trybe</a></li>
+              <li><a href="https://github.com/mmdec" target="_blank">Meu perfil no github</a></li>
+              <li><a href="https://www.linkedin.com/in/mmdec/" target="_blank">Meu perfil no Linkedin</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
