resolve todos requisitos

--- a/index.html
+++ b/index.html
@@ -49,14 +49,28 @@
         <li>Ciência da computação</li>        
     </ul>
     </section>
-    <article>
-        Por mais dificil que seja tomar riscos, vi na <a href="https://www.betrybe.com" target="_blank">Trybe</a> a oportunidade de aprende uma nova profissão e mudar o rumo em que minha vida estava indo.
-        Em pouco tempo já aprendi muito, e não somente hard-skills, mas também soft-skills.
-        E mesmo sem saber como será a linha de chegada ao final do curso, já posso dizer que, a caminhada será transformadora! 
-    </article>
-    <aside>
-        No inicio do curso, por mais que tivesse sido avisado, senti um pouco de desconforto com o sistema de aprendizado “ativo”, mas em pouco mais de uma semana já vejo como essencial para uma real fixação do aprendizado.
-    </aside>
+    <table>
+      <tr>
+        <th>Escola</th>
+        <th>Inicio</th>
+        <th>Conclusao</th>
+      </tr>
+      <tr>
+        <td>Trybe</td>
+        <td>O sonho começou mes 8</td>
+        <td>Loading</td>
+      </tr>     
+    </table>
+    <div>
+      <article class="lado-esquerdo">
+          Por mais dificil que seja tomar riscos, vi na <a href="https://www.betrybe.com" target="_blank">Trybe</a> a oportunidade de aprende uma nova profissão e mudar o rumo em que minha vida estava indo.
+          Em pouco tempo já aprendi muito, e não somente hard-skills, mas também soft-skills.
+          E mesmo sem saber como será a linha de chegada ao final do curso, já posso dizer que, a caminhada será transformadora! 
+      </article>
+      <aside class="lado-direito">
+          No inicio do curso, por mais que tivesse sido avisado, senti um pouco de desconforto com o sistema de aprendizado “ativo”, mas em pouco mais de uma semana já vejo como essencial para uma real fixação do aprendizado.
+      </aside>
+    </div>
     
     
     <footer id="rodape">
