--- a/index.html
+++ b/index.html
@@ -60,7 +60,23 @@
             </p>
             
         </aside>
-
+        <table>
+            <tr>
+              <th>Company</th>
+              <th>Contact</th>
+              <th>Country</th>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Maria Anders</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Centro comercial Moctezuma</td>
+              <td>Francisco Chang</td>
+              <td>Mexico</td>
+            </tr>
+          </table>
     </section>
     <footer id="rodape">
         <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank">Curriculo de formação completo (Open in new window)</a>
